Add viewport meta tag to default template

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>{{ site.name }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,900|Roboto" rel="stylesheet">
