--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width">
     <title>{{ site.name }}</title>
     <link rel="stylesheet" href="/styles/styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,900|Roboto" rel="stylesheet">
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-55346707-2', 'auto');ga('send', 'pageview');</script>
   </head>
   <body>
@@ -15,5 +14,6 @@
       <a class="contact-link" target="_blank" href="{{ site.formurl }}">{{ site.formcta }}</a>
     </header>
     {{ content }}
+    {% include async-font.html %}
   </body>
 </html>
