--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -36,7 +36,7 @@ header {
   .site-name {
     margin: 0; 
     text-transform: uppercase;
-    font-family: "Roboto", sans-serif;
+    @include async-font("Roboto");
     font-weight: 700;
     font-size: 16px;
     letter-spacing: 2px;
