Add fixes to async font loading

--- a/_includes/async-font.html
+++ b/_includes/async-font.html
@@ -2,7 +2,7 @@
 <script>
   WebFont.load({
     google: {
-        families: ["Roboto", "Merriweather:300,900"]
+        families: ["Roboto:400,700", "Merriweather:400,700"]
     }
   });
 </script>
