--- a/styles/modules/_typography.scss
+++ b/styles/modules/_typography.scss
@@ -1,6 +1,10 @@
 @mixin async-font($font, $fallback: sans-serif) {
   font-family: $fallback;
 
+  .no-js & {
+    font-family: $font $fallback;
+  }
+
   .wf-active & {
     font-family: $font $fallback;
   }
