--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
       <a class="contact-link" target="_blank" href="{{ site.formurl }}">{{ site.formcta }}</a>
     </header>
     {{ content }}
+    <script>document.documentElement.classList.remove('no-js');</script>
     {% include async-font.html %}
+    {% include prism.html %}
   </body>
 </html>
