Add footer link

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,4 +6,8 @@
       <h2 class="post-title">{{ page.title }}</h3>
       <hr>
       {{ content }}
+      <footer class="post-footer">
+      Did you like the post? Do you have any questions? <br /> 
+      <a href="https://twitter.com/AdamGieseDev">Feel free to message me on Twitter!</a>
+      </footer>
     </div>
