--- a/styles/partials/_post.scss
+++ b/styles/partials/_post.scss
@@ -24,4 +24,13 @@
     margin: 0 auto;
     max-width: 400px;
   }
+  &-footer {
+    margin-top: 1rem;
+    padding: 1rem;
+    background: #eee;
+
+    a {
+      color: $color-accent;
+    }
+  }
 }
