Add publish date to posts

--- a/styles/partials/_post.scss
+++ b/styles/partials/_post.scss
@@ -9,6 +9,11 @@
     text-align: center;
   }
 
+  &-date {
+    text-align: center;
+    margin: 0;
+  }
+
   &-permalink {
     font-size: 22px;
     color: #699;
