--- a/styles/modules/_typography.scss
+++ b/styles/modules/_typography.scss
@@ -2,10 +2,10 @@
   font-family: $fallback;
 
   .no-js & {
-    font-family: $font $fallback;
+    font-family: $font, $fallback;
   }
 
   .wf-active & {
-    font-family: $font $fallback;
+    font-family: $font, $fallback;
   }
 }
